--- a/rdv.html
+++ b/rdv.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/rdv.css">
     <link rel="stylesheet" href="styles/footer.css">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
