--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
                 <hr>
 
-                <div class="copyright">&copy; 2022-2023 HIREC.FR</div>
+                <div class="copyright">&copy; 2023 - HIREC.FR Tous droit réservés.</div>
             </div>
         </div>
     </section>
