--- a/index.html
+++ b/index.html
@@ -75,23 +75,21 @@
         <h1>Mes services</h1>
         <div class="cardscontainer">
             <div class="card">
-                <h2 class="cardTitle">Dépannage</h2>
+                <h2 class="cardTitle">Dépannage & Entretien Informatique</h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio
-                    commodi
+                    Dépannage de vos ordinateurs portables ou fixes (windows, Linux, Mac) : Analyse du problème matériel
+                    ou
+                    logiciel, changement de pièce, de pâte thermique, nettoyage, remise à neuf, optimisation.
+                    <br><br>
+                    Possibilité de control à distance. Installation de windows ainsi que logiciels nécessaires.
                 </p>
             </div>
             <div class="card">
-                <h2 class="cardTitle">Dépannage</h2>
+                <h2 class="cardTitle">Montage & Conseil PC sur mesure</h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio
-                    commodi
+                    Conseil pour choisir son PC fixe ou portable pour GAMER ou BUREAUTIQUE. <br><br>
+                    Conseils pour choisir les
+                    pièces de son PC sur mesure. Montage à domicile ou à distance de ma part avec envoie possible.
                 </p>
             </div>
             <div class="card">
@@ -106,6 +104,8 @@
             </div>
         </div>
     </section>
+
+
 
     <section id="footer" class="footerContainer">
         <div class="row">
@@ -122,8 +122,6 @@
             <div class="footer-col">
                 <h4>Entreprise</h4>
                 <ul>
-                    <li><a class="footerLink" href="contact.html">Service personalisé</a></li>
-                    <li><a class="footerLink" href="rdv.html">Prendre RDV</a></li>
                     <li><a class="footerLink" href="#">Politique de confidentialité</a></li>
                     <li><a class="footerLink" href="">Mentions légales</a></li>
                 </ul>
