--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
 
             <div class="underText">
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt perspiciatis asperiores voluptatibus
-                    quas
-                    amet
-                    mollitia, fuga, necessitatibus deserunt velit facere quos nemo recusandae minima cupiditate dolorem
-                    voluptas
-                    iste dolore quo?
+                    Dépannage, Réparation & conseils Informatique (PC & MAC) Le Mans.
+                    Changement de toutes les pièces possibles, <br>
+                    Logiciels, Antivirus, Récupération de donées, <br>
+                    Site internet.
                 </p>
             </div>
             <a href="#services" class="seeMore">Voir plus</a>
@@ -72,7 +70,7 @@
     </div>
 
     <section id="services" class="seeMore">
-        <h1>Mes services</h1>
+        <h1>Services à disposition</h1>
         <div class="cardscontainer">
             <div class="card">
                 <h2 class="cardTitle">Dépannage & Entretien Informatique</h2>
@@ -87,19 +85,31 @@
             <div class="card">
                 <h2 class="cardTitle">Montage & Conseil PC sur mesure</h2>
                 <p>
-                    Conseil pour choisir son PC fixe ou portable pour GAMER ou BUREAUTIQUE. <br><br>
-                    Conseils pour choisir les
-                    pièces de son PC sur mesure. Montage à domicile ou à distance de ma part avec envoie possible.
+                    Montage de A à Z de votre PC personnalisé à votre utilisation, (pièces du pc fournis ou non).
+                    <br><br>
+                    Conseils pour tous les appareils informatique, achats, choix de pièces.<br><br>
+
                 </p>
             </div>
             <div class="card">
-                <h2 class="cardTitle">Dépannage</h2>
+                <h2 class="cardTitle">Cours Informatique & High-Tech</h2>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio commodi
-                    consequuntur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet magni, minima optio
-                    commodi
+                    Cours particuliers à domicile ou à distance pour apprendre à vous servir de votre ordinateur, de
+                    votre
+                    smartphone, des logiciels et applications.
+                    <br><br>
+                    Les bases de A à Z : wifi, imprimante, traitement de texte,
+                    montage photo, montage vidéo, installation de logiciels, et plus encore.
+                </p>
+            </div>
+        </div>
+        <br><br>
+        <div class="cardscontainer">
+            <div class="card">
+                <h2 class="cardTitle">Création de site web & design</h2>
+                <p>
+                    Création de site vitrine pour particuliers ou professionels.
+                    design sur-mesure.
                 </p>
             </div>
         </div>
